--- a/src/components/NavBar/navBar.module.scss
+++ b/src/components/NavBar/navBar.module.scss
@@ -27,15 +27,14 @@
    }
    &_link {
       display: inline-block;
-      padding-top: 25px;
-      padding-bottom: 25px;
+      padding: 25px 5px 25px 5px;
 
       border-radius: 10px;
 
       text-align: center;
 
       margin-right: 5px;
-      width: 100px;
+      min-width: 50px;
       &:hover {
          background-color: #283a9d;
          cursor: pointer;
