--- a/src/components/NavBar/navBar.module.scss
+++ b/src/components/NavBar/navBar.module.scss
@@ -34,7 +34,7 @@
     text-align: center;
 
     margin-right: 5px;
-    min-width: 50px;
+    width: 80px;
     &:hover {
       background-color: #283a9d;
       cursor: pointer;
