--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 * {
-   font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+html,
+body,
+#root,
+.App {
+  height: 100%;
 }
