--- a/src/components/ProjectThumbnail/projectThumbnail.module.scss
+++ b/src/components/ProjectThumbnail/projectThumbnail.module.scss
@@ -28,6 +28,22 @@
         text-align: justify;
         text-justify: inter-word;
       }
+      ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+
+      li {
+        padding: 10px 20px;
+        margin-bottom: 5px;
+        border-radius: 5px;
+
+        &:before {
+          content: '➤';
+          margin-right: 10px;
+        }
+      }
     }
   }
   &.maximized {
@@ -76,17 +92,23 @@
   padding: 5px;
   border-radius: 3px;
   margin-left: 5px;
+  margin-bottom: 2px;
   position: relative;
-  bottom: 5px;
-  background-color: rgb(47, 47, 47);
+  top: 5px;
+  background-color: #ff7800;
   color: white;
   &.red {
-    background-color: #ff4136;
+    //background-color: #ff4136;
   }
   &.blue {
-    background-color: #0074d9;
+    // background-color: #0074d9;
   }
   &.green {
-    background-color: #2ecc40;
+    //background-color: #2ecc40;
   }
+}
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100%;
 }
